--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,4 +41,5 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     implementation 'com.android.volley:volley:1.2.1'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
+    implementation 'com.google.android.exoplayer:exoplayer:2.7.3'
 }
